Filter & sort the is_automated column

--- a/tcms/testplans/templates/testplans/get.html
+++ b/tcms/testplans/templates/testplans/get.html
@@ -330,6 +330,7 @@
 <template id="toolbar-dropdown">
     <li class="selected" data-filter-type="summary"><a>{% trans 'Summary' %}</a></li>
     <li data-filter-type="case_status"><a>{% trans 'Status' %}</a></li>
+    <li data-filter-type="is_automated"><a>{% trans 'Automated' %}</a></li>
     <li data-filter-type="priority"><a>{% trans 'Priority' %}</a></li>
     <li data-filter-type="category"><a>{% trans 'Category' %}</a></li>
     <li data-filter-type="author"><a>{% trans 'Author' %}</a></li>
