Use an existing prompt message

--- a/tcms/testplans/templates/testplans/get.html
+++ b/tcms/testplans/templates/testplans/get.html
@@ -18,7 +18,7 @@
               data-perm-change-testcase="{{ perms.testcases.change_testcase }}"
               data-perm-remove-testcase="{{ perms.testcases.delete_testcaseplan }}"
               data-perm-add-testcase="{{ perms.testcases.add_testcase }}"
-              data-trans-default-tester-prompt-message="{% trans 'Please type new email or username' %}"
+              data-trans-default-tester-prompt-message="{% trans 'Enter username, email or user ID:' %}"
               data-trans-no-testcases-selected="{% trans 'No rows selected! Please select at least one!'%}"
         >TP-{{ object.pk }}:</span> {{ object.name }}
     </h1>
