--- a/tcms/testplans/templates/testplans/get.html
+++ b/tcms/testplans/templates/testplans/get.html
@@ -296,9 +296,14 @@
                             <span class="fa pficon-user"></span>
                             <span class="js-test-case-author"></span>
                         </div>
-                        <div title="{% trans 'Default tester' %}" class="list-view-pf-additional-info-item">
+                        <div title="{% trans 'Default tester' %}" class="list-view-pf-additional-info-item js-test-case-tester-div">
                             <span class="fa fa-search"></span>
                             <span class="js-test-case-tester"></span>
+                        </div>
+
+                        <div title="{% trans 'Reviewer' %}" class="list-view-pf-additional-info-item js-test-case-reviewer-div hidden">
+                            <span class="fa fa-history"></span>
+                            <span class="js-test-case-reviewer"></span>
                         </div>
                     </div>
                 </div>
@@ -335,6 +340,7 @@
     <li data-filter-type="category"><a>{% trans 'Category' %}</a></li>
     <li data-filter-type="author"><a>{% trans 'Author' %}</a></li>
     <li data-filter-type="default_tester"><a>{% trans 'Default tester' %}</a></li>
+    <li data-filter-type="reviewer"><a>{% trans 'Reviewer' %}</a></li>
 </template>
 
 <script src="{% static 'typeahead.js/dist/typeahead.jquery.min.js' %}"></script>
