Fix typo in class name

--- a/tcms/testplans/templates/testplans/get.html
+++ b/tcms/testplans/templates/testplans/get.html
@@ -335,7 +335,7 @@
                     <span>{% trans 'Attachments' %}:</span>
                     <ul class="list-group list-unstyled js-test-case-expand-attachments">
                         <template id="attachments-list-item">
-                        <li class="list-group-item'">
+                        <li class="list-group-item">
                             <a></a>
                         </li>
                         </template>
