Add bulk action for changing default tester

--- a/tcms/testplans/templates/testplans/get.html
+++ b/tcms/testplans/templates/testplans/get.html
@@ -179,7 +179,7 @@
                                             </ul>
                                         </div>
                                         <button class="btn btn-default"
-                                                type="button"
+                                                type="button" id="default-tester-button"
                                             {% if not perms.testcases.change_testcase %}
                                                     disabled
                                             {% endif %}>{% trans 'Default tester' %}</button>
