--- a/tcms/testplans/templates/testplans/get.html
+++ b/tcms/testplans/templates/testplans/get.html
@@ -96,9 +96,30 @@
                 <div class="card-pf-body">
                     <div class="container-fluid">
                         <div class="row toolbar-pf">
-                            <div class="col-sm-12 toolbar-pf-filter">
+                            <div class="col-sm-12 toolbar-pf-filter" style="padding-left:0">
                                 <form class="toolbar-pf-actions">
-                                    <div class="form-group" style="margin-right:15px; padding-right: 15px;">
+                                    <div class="form-group" style="padding:0; border:0">
+                                        <div class="dropdown btn-group dropdown-kebab-pf">
+                                            <button class="btn btn-link dropdown-toggle"
+                                                    type="button" id="testCaseActions"
+                                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                                <span class="fa fa-bars"></span>
+                                            </button>
+
+                                            <ul class="dropdown-menu " aria-labelledby="testCaseActions">
+                                            {% if perms.testcases.add_testcase %}
+                                                <li>
+                                                    <a href="{% url "testcases-new" %}?from_plan={{ object.pk }}">
+                                                        <span class="fa fa-pencil"></span>
+                                                        {% trans 'New Test Case' %}
+                                                    </a>
+                                                </li>
+                                            {% endif %}
+                                                <li class="divider"></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="form-group" style="margin-right:10px; padding-right: 10px;">
                                         <input type="checkbox" class="js-checkbox-toolbar">
                                     </div>
                                     <div class="form-group toolbar-pf-filter">
