--- a/tcms/testplans/templates/testplans/get.html
+++ b/tcms/testplans/templates/testplans/get.html
@@ -98,8 +98,8 @@
                         <div class="row toolbar-pf">
                             <div class="col-sm-12 toolbar-pf-filter" style="padding-left:0">
                                 <form class="toolbar-pf-actions">
-                                    <div class="form-group" style="padding:0; border:0">
-                                        <div class="dropdown btn-group dropdown-kebab-pf">
+                                    <div class="form-group" style="padding-left:10px; padding-right:0; border:0">
+                                        <div class="dropdown btn-group">
                                             <button class="btn btn-link dropdown-toggle"
                                                     type="button" id="testCaseActions"
                                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
@@ -191,7 +191,7 @@
                                             </ul>
                                         </div>
                                     </div>
-                                    <div class="form-group" style="margin-right:10px; padding-right: 10px;">
+                                    <div class="form-group" style="margin-right:15px; padding-right: 8px;">
                                         <input type="checkbox" class="js-checkbox-toolbar">
                                     </div>
                                     <div class="form-group toolbar-pf-filter">
@@ -208,7 +208,7 @@
                                                 </ul>
                                             </div><!-- /btn-group -->
                                             <input type="text" class="form-control" id="toolbar-filter"
-                                                   placeholder="{% trans 'Filter criteria' %}...">
+                                                   placeholder="{% trans 'Search' %}">
                                         </div><!-- /input-group -->
                                     </div>
                                     <div class="form-group">
@@ -235,6 +235,24 @@
                                             {% endif %}
                                         </div>
                                     </div>
+                                {% if perms.testcases.add_testcaseplan %}
+                                    <div class="form-group">
+                                        <input id="search-testcase"
+                                            type="text"
+                                            placeholder="{% trans 'Search and add test cases' %}"
+                                            class="form-control typeahead">
+
+                                        <button class="btn btn-default"
+                                            href="#" id="btn-add-case" title="{% trans 'Add' %}">
+                                            <span class="fa fa-plus"></span>
+                                        </button>
+
+                                        <button class="btn btn-default" href="#"
+                                            id="btn-search-cases" title="{% trans 'Advanced search' %}">
+                                            <span class="fa fa-search"></span>
+                                        </button>
+                                    </div>
+                                {% endif %}
                                 </form>
                             </div><!-- /col -->
                         </div><!-- /row -->
