--- a/tcms/templates/patternfly.html
+++ b/tcms/templates/patternfly.html
@@ -8,5 +8,6 @@
     <!-- JS -->
     <script src="{% static 'jquery/dist/jquery.min.js' %}"></script>
     <script src="{% static 'datatables.net/js/jquery.dataTables.min.js' %}"></script>
+    <script src="{% static 'datatables.net-select/js/dataTables.select.min.js' %}"></script>
     <script src="{% static 'bootstrap/dist/js/bootstrap.min.js' %}"></script>
     <script src="{% static 'patternfly/dist/js/patternfly.min.js' %}"></script>
