--- a/tcms/testcases/templates/testcases/search.html
+++ b/tcms/testcases/templates/testcases/search.html
@@ -132,6 +132,7 @@
         <table class="table table-striped table-bordered table-hover" id="resultsTable">
             <thead>
                 <tr>
+                    <th class="js-select-checkbox"></th>
                     <th>{% trans "ID" %}</th>
                     <th>{% trans "Summary" %}</th>
                     <th>{% trans "Created on" %}</th>
